<resources>
    <string name="app_name">MExpense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="alert_failed">Add Failed</string>
    <string name="alert_success">Add Successfully</string>
    <string name="logo">Logo</string>
    <string name="create_an_account"><u>Create an account?</u></string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="delete_all_trip"><u>Delete all</u></string>
    <string name="total_amount">Total Amount:</string>
    <string name="Balance">Balance</string>
    <string name="TotalExpense">Total Expenses:</string>
    <string name="SearchTrip">Search trip</string>
    <string name="balance">Balance:</string>
    <string name="btnGoToTip">Go to Trip Management</string>
    <string name="description_of_trip">Trip Description</string>
    <string name="name_of_trip">Trip Name</string>
    <string name="destination_of_trip">Trip Destination</string>
    <string name="date_of_trip">Date of trip</string>
    <string name="none_risk">None Risk</string>
    <string name="risk">Risk</string>
    <string name="delete_trip">Delete</string>
    <string name="cancel_delete_trip">Cancel</string>
    <string name="expense_type">Expense Type</string>
    <string name="expense_date">Expense Date</string>
    <string name="expenseAmount">100000$</string>
    <string name="totalExpense">123456789</string>
    <string name="totalAmount">123456789</string>
    <string name="OK">OK</string>
    <string name="totalTrip">Total Trip</string>
    <string name="type_of_expense">Expense Type</string>
    <string name="date_of_expense">Expense Date</string>
    <string name="description_of_expense">Expense Description</string>
    <string name="trip_amount">Trip Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_settings">Notifications</string>
    <string name="password_txt">123456789</string>
    <string name="username_txt">123456789</string>
    <string name="SearchExpense">Search Expense</string>
    <string name="total_trip">Total Trips:</string>
    <string name="export_success">Export Successfully</string>
    <string name="export_failed">Export Failed</string>
    <string name="delete_q">Delete</string>
    <string name="empty_fields">Empty fields</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="notification">Notification</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="view_details">View details</string>


</resources>