<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainfragments.UpdateTripFragment">


    <RelativeLayout
        android:id="@+id/updateTripForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/titleUpdateTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="Update Trip"
            android:textColor="@color/orange"
            android:textSize="50sp"
            tools:ignore="HardcodedText" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_below="@+id/titleUpdateTrip">

            <EditText
                android:id="@+id/updateTripName_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name_of_trip"
                android:background="@drawable/rounded"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:autofillHints=""
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:inputType="text" />

            <EditText
                android:id="@+id/updateTripDestination_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/updateTripName_input"
                android:hint="@string/destination_of_trip"
                android:background="@drawable/rounded"
                android:layout_marginTop="25dp"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:autofillHints="" />

            <EditText
                android:id="@+id/tripDate_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/updateTripDestination_input"
                android:hint="@string/date_of_trip"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded"
                android:inputType="datetime"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:autofillHints="" />
            <RadioGroup
                android:id="@+id/updateRadioGroupRiskCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tripDate_input"
                android:orientation="horizontal"
                android:layout_marginTop="9dp"
                android:gravity="center"
                >
                <RadioButton
                    android:id="@+id/updateRadioButtonNoneRisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:checked="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/orange"
                    android:text="@string/none_risk"
                    />
                <RadioButton
                    android:id="@+id/updateRadioButtonRisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/orange"
                    android:text="@string/risk"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/updateTripDescription_input"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/rounded"
                android:layout_below="@+id/updateRadioGroupRiskCheck"
                android:hint="@string/description_of_trip"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:maxLength="150"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:autofillHints="" />

            <Button
                android:id="@+id/updateTripBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/updateTripDescription_input"
                android:text="Update"
                android:background="@drawable/btn_rounded_full_fill"
                android:textSize="24sp"
                android:textAllCaps="false"
                tools:ignore="HardcodedText" />

        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>