<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainfragments.TotalFragment">

    <LinearLayout
        android:id="@+id/TotalAmount"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_full_fill_blue"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/total_amount"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/valueTotalAmount"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Balance"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/TotalAmount"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_full_fill_green"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/Balance"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="123456789"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TotalExpense"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/Balance"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_full_fill_purple"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/TotalExpense"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/totalExpense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:text="123456789"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</RelativeLayout>